--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ ipython = "*"
 black = "==23.1.0"
 twine = "*"
 pytest = "*"
+types-markdown = "*"
+flake8-import-order = "*"
 
 [requires]
 python_version = "3.10"
