--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,6 @@ name = "pypi"
 scrapy = "*"
 dateparser = "*"
 datasets = "==2.19.1"
-scikit-learn = "==1.2.1"
 sentencepiece = "==0.2.0"
 transformers = {extras = ["torch"], version = "==4.40.2"}
 torch = "==2.3.0"
@@ -15,6 +14,7 @@ shub-workflow = "==1.14.9.1"
 pillow = "*"
 einops = "==0.8.0"
 torchvision = "==0.18.0"
+scikit-learn = "==1.6.1"
 
 [dev-packages]
 flake8 = "*"
@@ -24,6 +24,7 @@ black = "==23.1.0"
 twine = "*"
 pytest = "*"
 flake8-import-order = "*"
+types-dateparser = "*"
 
 [requires]
 python_version = "3.10"
